--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,20 @@
 
 #Emblem {
 
+	z-index: 1;
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+	width: 30%;
+}
+
+
+#Wheel {
+
+	z-index: 0;
 	position: absolute;
 
 	top: 50%;
