--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 
 #Emblem {
 
-	z-index: 1;
+	z-index: 2;
 	position: absolute;
 
 	top: 50%;
@@ -14,7 +14,7 @@
 
 #Wheel {
 
-	z-index: 0;
+	z-index: 1;
 	position: absolute;
 
 	top: 50%;
@@ -22,4 +22,16 @@
 
 	transform: translate(-50%, -50%);
 	width: 30%;
+}
+
+#Willkommen {
+
+	z-index: 0;
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+	height: 100%;
 }
