--- a/css/app.css
+++ b/css/app.css
@@ -1,52 +1,125 @@
 
-#Willkommen {
 
-	z-index: 0;
+@media screen and (min-width: 800px) {
 
-	top: 50%;
-	left: 50%;
-	width: 50%;
+	#Willkommen {
 
-	position: absolute;
-	transform: translate(-50%, -50%);
+		z-index: 0;
+
+		top: 50%;
+		left: 50%;
+		width: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Rad {
+
+		z-index: 1;
+
+		top: 50%;
+		left: 50%;
+		width: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Emblem {
+
+		z-index: 3;
+
+		top: 50%;
+		left: 50%;
+		width: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Griff {
+
+		background-color: transparent;
+		border-radius: 50%;
+
+		z-index: 2;
+
+		top: 50%;
+		left: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+
+		display: inline-block;
+	}
 }
 
-#Rad {
 
-	z-index: 1;
 
-	top: 50%;
-	left: 50%;
-	width: 30%;
 
-	position: absolute;
-	transform: translate(-50%, -50%);
-}
 
-#Emblem {
 
-	z-index: 3;
 
-	top: 50%;
-	left: 50%;
-	width: 30%;
 
-	position: absolute;
-	transform: translate(-50%, -50%);
-}
 
-#Griff {
 
-	background-color: transparent;
-	border-radius: 50%;
 
-	z-index: 2;
 
-	top: 50%;
-	left: 50%;
 
-	position: absolute;
-	transform: translate(-50%, -50%);
 
-	display: inline-block;
+
+@media screen and (max-width: 800px) {
+
+	#Willkommen {
+
+		z-index: 0;
+
+		top: 50%;
+		left: 50%;
+		height: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Rad {
+
+		z-index: 1;
+
+		top: 50%;
+		left: 50%;
+		height: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Emblem {
+
+		z-index: 3;
+
+		top: 50%;
+		left: 50%;
+		height: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+	}
+
+	#Griff {
+
+		background-color: transparent;
+		border-radius: 50%;
+
+		z-index: 2;
+
+		top: 50%;
+		left: 50%;
+
+		position: absolute;
+		transform: translate(-50%, -50%);
+
+		display: inline-block;
+	}
 }
