--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (min-width: 800px) {
+@media screen and (orientation: landscape) {
 
 	#Willkommen {
 
@@ -69,7 +69,7 @@
 
 
 
-@media screen and (max-width: 800px) {
+@media screen and (orientation: portrait) {
 
 	#Willkommen {
 
