--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,8 @@
 		left: 50%;
 		width: 50%;
 
+		max-height: 80%;
+
 		position: absolute;
 		transform: translate(-50%, -50%);
 	}
@@ -22,6 +24,8 @@
 		left: 50%;
 		width: 50%;
 
+		max-height: 80%;
+
 		position: absolute;
 		transform: translate(-50%, -50%);
 	}
@@ -33,6 +37,8 @@
 		top: 50%;
 		left: 50%;
 		width: 50%;
+
+		max-height: 80%;
 
 		position: absolute;
 		transform: translate(-50%, -50%);
@@ -78,6 +84,7 @@
 		top: 50%;
 		left: 50%;
 		height: 50%;
+		max-width: 90%;
 
 		position: absolute;
 		transform: translate(-50%, -50%);
@@ -90,6 +97,7 @@
 		top: 50%;
 		left: 50%;
 		height: 50%;
+		max-width: 90%;
 
 		position: absolute;
 		transform: translate(-50%, -50%);
@@ -102,6 +110,7 @@
 		top: 50%;
 		left: 50%;
 		height: 50%;
+		max-width: 90%;
 
 		position: absolute;
 		transform: translate(-50%, -50%);
