--- a/css/app.css
+++ b/css/app.css
@@ -5,8 +5,17 @@
 
 	#Inhalt {
 
-		height: 500px;
+		height: 2000px;
 
+	}
+
+	#Ticket {
+
+		
+		top: 50%;
+		left: 50%;
+		width: 100%;
+		
 	}
 
 	#Kern {
