--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,3 @@
-// GLOBAL
 
 	#Vorhang {
 	}
@@ -11,6 +10,7 @@
 
 	#Inhalt {
 
+		opacity: 0;
 		height: 2000px;
 
 	}
@@ -18,6 +18,7 @@
 
 	#Ticket {
 		
+		opacity: 0;
 		top: 100%;
 		left: 50%;
 		width: 100%;
@@ -38,6 +39,7 @@
 
 	.Kern {
 
+		opacity: 0;
 		top: 50%;
 		left:  50%;
 
@@ -52,6 +54,7 @@
 
 		#Rad {
 			z-index: 1;
+			max-height: 1000px;
 		}
 
 		#Emblem {
@@ -75,34 +78,29 @@
 
 
 
-// ORIENTIERT
 
-
-@media (orientation: landscape) {
+@media screen and (orientation:landscape) {
 	#Sicht {	
 		overflow: hidden	
 	}
 
 
 		#Willkommen {
-			height: 100%;
+			height: 140%;
 		}
 
 		#Rad {
-			width: 30%;
+			height: 80%;
 		}
 
-		#Emblem {
-			height: 50%;
-		}
 		.Sterne {
-			height: 200%;
+			height: 300%;
 		}
 }
 
 
 
-@media (orientation: portrait) {
+@media screen and (orientation:portrait) {
 	#Sicht {	
 		overflow: hidden	
 	}
@@ -112,14 +110,11 @@
 		}
 
 		#Rad {
-			height: 50%;
+			width: 80%;
 		}
 
-		#Emblem {
-			height: 50%;
-		}
 		.Sterne {
-			height: 200%;
+			width: 300%;
 		}
 
 }
