--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,8 @@
 		}
 		#Anleitung {
 			z-index: 0;
-
+			transform: translate3d(-50%, -51%, 0 );
+			position: fixed;
 		}
 
 		#Rad {
@@ -134,7 +135,7 @@
 		}
 
 		#Anleitung {
-			height: 60%;
+			height: 150%;
 		}
 
 		#Rad {
@@ -161,7 +162,7 @@
 		}
 
 		#Anleitung {
-			width: 120%;
+			width: 150%;
 		}
 
 		#Rad {
